# API_clash_royale

./: Dockerfile  LICENSE.txt  Procfile  README.md  apiclash.py  app.py  cartas_construcao.csv  cartas_feitico.csv  fly.toml  requirements.txt
app/: cartas_tropa.csv  pyproject.toml
